Apply quick fixes